Devops/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bluelearnerhub
  labels:
    name: bluelearnerhub
    environment: production
